fix layout bugs on Safari

--- a/src/applications/administration-roles-app/roles/roles-list.component.scss
+++ b/src/applications/administration-roles-app/roles/roles-list.component.scss
@@ -5,7 +5,6 @@
 .kRoles {
   font-size: 15px;
   background-color: $appBkgColor;
-  min-height: $contentArea;
   padding-top: 30px;
   width: 100%;
   min-width: $minAppWidth;
