--- a/src/applications/content-categories-app/categories/categories-list.component.scss
+++ b/src/applications/content-categories-app/categories/categories-list.component.scss
@@ -8,7 +8,6 @@
 .kCategories {
   font-size: 15px;
   background-color: $appBkgColor;
-  min-height: $contentArea;
   padding-top: 30px;
   width: 100%;
   min-width: $minAppWidth;
