--- a/src/applications/content-playlists-app/playlists/playlists-list.component.scss
+++ b/src/applications/content-playlists-app/playlists/playlists-list.component.scss
@@ -5,7 +5,6 @@
 .kPlaylists {
     font-size: 15px;
     background-color: $appBkgColor;
-	min-height: $contentArea;
     padding-top: 30px;
     width: 100%;
 	min-width: $minAppWidth;
