--- a/src/shared/content-shared/entries-list/entries-list.component.scss
+++ b/src/shared/content-shared/entries-list/entries-list.component.scss
@@ -3,7 +3,6 @@
 .kEntries {
   font-size: 15px;
   background-color: $appBkgColor;
-  min-height: $contentArea;
   padding-top: 30px;
   width: 100%;
   min-width: $minAppWidth;
